apps/kubernetes/k3s/_sunset/gitea/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitea
  namespace: gitea
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gitea.hughboi.vip`)
      kind: Rule
      services:
        - name: gitea
          port: 3000
  tls:
    secretName: hughboi-tls
